--- a/package.json
+++ b/package.json
@@ -7,12 +7,57 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "core-js": "^3.6.5",
+        "vue": "^2.6.11",
+        "bootstrap": "^3.3.7",
+        "ckeditor": "^4.11.4",
+        "jquery": "^3.1.1",
+        "jspdf": "^2.3.0",
+        "jspdf-autotable": "^3.0.10",
+        "survey-analytics": "latest",
+        "survey-core": "latest",
+        "survey-creator-core": "latest",
+        "survey-creator-knockout": "latest",
+        "survey-pdf": "latest",
+        "survey-vue": "latest",
+        "surveyjs-widgets": "latest",
+        "vue-router": "^3.1.6",
+        "xlsx": "^0.16.9"
     },
     "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
         "axios": "^0.25",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+        "postcss": "^8.1.14",
+        "vue-axios": "^3.4.1",
+        "vue-loader": "^17.0.0",
+        "vue-router": "^4.0.14",
+        "vue-template-compiler": "^2.6.14"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
